# token-optimizer

./: .gitignore  Cargo.toml  README.md  TECHNICAL_DEBT_ANALYSIS.md  claude-mcp-config.json
doc/: INSTALL_CUDNN.md  ML_IMPLEMENTATION_SUMMARY.md  ML_QUALITY_ASSESSMENT_AND_REPAIR_GUIDE.md  ML_SYSTEM_DOCUMENTATION.md  ML_USER_GUIDE.md  token_optimizer_development_guide.md  token_optimizer_development_guide_completion.md
doc/consolidated/: DEVELOPMENT_GUIDE.md  FEATURES.md  README.md  SETUP.md
doc/gemini/: AGENT_SUITE_PROPOSAL.md  AI_CODE_VALIDATION_STRATEGY.md  AI_RELIABILITY_STRATEGY.md  AI_SESSION_MEMORY_STRATEGY.md  AREAS_DE_MEJORA.md
docs/: ML_PIPELINE_ARCHITECTURE.md  SCALING_RISKS_ANALYSIS.md  VECTOR_DB_SCALING_ANALYSIS.md
scripts/: dev-mcp-server.sh  e2e_tests.sh  mcp-tools.sh  quick-index.sh  setup-indexer-service.sh
src/: e2e_calendar_test.rs  integration_test.rs  lib.rs  main.rs
src/analyzers/: code_summarizer.rs  diff_analyzer.rs  file_analyzer.rs  interceptor_analyzer.rs  mod.rs  routing_analyzer.rs  rust_analyzer.rs  state_analyzer.rs  tree_sitter_tests.rs  ts_ast_analyzer.rs
src/cache/: cache_manager.rs  mod.rs  smart_cache.rs
src/cli/: cli.rs  mod.rs
src/cli/commands/: analyze.rs  cache.rs  changes.rs  mcp_commands.rs  ml_commands.rs  mod.rs  overview.rs  summary.rs
src/generators/: mod.rs  project_overview.rs  report_generator.rs
src/mcp/: context_optimizer.rs  mod.rs  server.rs  tools.rs
src/ml/: cache.rs  config.rs  external_timeout.rs  layered_analysis.rs  mod.rs  prompts.rs  real_integration_test.rs
src/ml/models/: downloader.rs  mod.rs
src/ml/plugins/: deepseek.rs  gguf_loader_test.rs  mod.rs  qwen_embedding.rs  qwen_reranker.rs  real_embedding_test.rs
src/ml/services/: context.rs  enhanced_search.rs  impact.rs  impact_analysis.rs  memory_leak_test.rs  mod.rs  optimization.rs  pattern.rs  pattern_e2e_test.rs  real_ml_test.rs  real_project_test.rs  real_vram_test.rs  search.rs  semantic_scoring_test.rs
src/ml/vector_db/: lsh_index.rs  mod.rs  persistence.rs  pipeline_demo.rs  semantic_search.rs  (+2 more)
src/types/: mod.rs
src/utils/: file_utils.rs  git_utils.rs  hash_utils.rs  mod.rs  path_normalizer.rs
tests/: cache_regression_tests.rs
(+4 files in other folders)
