[package]
name = "token-optimizer"
version = "0.1.0"
edition = "2021"
description = "Token optimization tools for efficient code analysis and caching"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
sha2 = "0.10"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rayon = "1.7"
tree-sitter = "0.25.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
async-trait = "0.1"
tempfile = "3.0"
