[package]
name = "token-optimizer"
version = "0.1.0"
edition = "2021"
description = "Token optimization tools for efficient code analysis and caching"
license = "MIT"

[[bin]]
name = "pipeline_demo"
path = "src/bin/pipeline_demo.rs"

[[bin]]
name = "cargo_analyzer_demo"
path = "src/bin/cargo_analyzer_demo.rs"

[[bin]]
name = "cargo_test_examples"
path = "src/bin/cargo_test_examples.rs"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
sha2 = "0.10"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23.1"
async-trait = "0.1"
tempfile = "3.0"

# ML Dependencies - Candle with CUDA + cuDNN for optimal performance
candle-core = { version = "0.9.1", features = ["cuda", "cudnn"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
serial_test = "3.0"
rand = "0.8"
toml = "0.8"

# Vector Database Dependencies
fnv = "1.0"

# MCP Server Dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"
bit-vec = "0.6"
